--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,12 +25,7 @@ jobs:
           plugin_achievements: yes
           plugin_achievements_display: detailed
           plugin_achievements_secrets: yes
-          plugin_achievements_threshold: C
-          plugin_activity: yes
-          plugin_activity_days: 14
-          plugin_activity_filter: all
-          plugin_activity_limit: 5
-          plugin_activity_load: 300
+          plugin_achievements_threshold: A
           plugin_activity_visibility: all
           plugin_introduction: yes
           plugin_introduction_title: yes
